<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:clipToPadding="true"
    android:transitionGroup="false"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/main_color"
        android:transitionGroup="false"
        >
        <RelativeLayout
            android:layout_width="60dp"
            android:layout_height="40dp">
            <ImageView
                android:id="@+id/home_user_image"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="centerCrop"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_camera_alt_black_24dp"
                android:tint="#fff"
                android:layout_marginLeft="8dp"
                />
        </RelativeLayout>

        <TextView
            android:id="@+id/home_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_centerInParent="true"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <ImageView
            android:id="@+id/main_message"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_message_black_24dp"
            android:layout_alignParentRight="true"
            android:scaleType="centerCrop"
            android:layout_marginRight="10dp"
            android:tint="#fff"
            android:layout_centerVertical="true"
            />

    </RelativeLayout>

    <TextView
        android:id="@+id/text_lable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:textSize="18sp"
        android:textColor="#E1421A1A"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/main_camera"
        android:layout_width="142dp"
        android:layout_height="111dp"
        android:layout_below="@id/text_lable"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_camera_alt_black_24dp"
        android:tint="#0F8ED8" />

    <LinearLayout
        android:id="@+id/home_linear1"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_below="@id/main_camera"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/home_clip_vedio"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            app:cardCornerRadius="8dp"
            app:cardUseCompatPadding="true"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardElevation="8dp"
            >

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:scaleType="fitXY"
                android:layout_margin="8dp"
                android:src="@drawable/ic_library_books_black_24dp"
                android:tint="@color/main_draw_c1"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/main_t1"
                android:textSize="18dp"
                android:letterSpacing="0.3"
                android:textColor="@color/main_text_clor"
                />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/home_clip_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            app:cardCornerRadius="8dp"
            app:cardUseCompatPadding="true"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardElevation="8dp"
            >
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="6dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_card_membership_black_24dp"
                android:tint="@color/main_draw_c4"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/main_t2"
                android:textSize="18dp"
                android:letterSpacing="0.3"
                android:textColor="@color/main_text_clor"
                />
        </androidx.cardview.widget.CardView>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/home_linear2"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_below="@id/home_linear1"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/home_detach_music"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            app:cardCornerRadius="8dp"
            app:cardUseCompatPadding="true"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardElevation="8dp"
            >
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:scaleType="fitXY"
                android:layout_margin="6dp"
                android:src="@drawable/ic_wb_incandescent_black_24dp"
                android:tint="@color/main_draw_c3"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/main_t3"
                android:textSize="18dp"
                android:letterSpacing="0.3"
                android:textColor="@color/main_text_clor"
                />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/home_compound_VM"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            app:cardCornerRadius="8dp"
            app:cardUseCompatPadding="true"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardElevation="8dp"
            >

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:scaleType="fitXY"
                android:layout_margin="6dp"
                android:src="@drawable/ic_shop_black_24dp"
                android:tint="@color/main_draw_c2"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/main_t4"
                android:textSize="18dp"
                android:letterSpacing="0.3"
                android:textColor="@color/main_text_clor"
                />
        </androidx.cardview.widget.CardView>

    </LinearLayout>



</RelativeLayout>